--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "UPSCb-common"]
 	path = UPSCb-common
 	url = git@github.com:UPSCb/UPSCb-common.git
+[submodule "Rtoolbox"]
+	path = Rtoolbox
+	url = https://github.com/loalon/Rtoolbox
