committing changes to various scripts.
Added scripts such as TF_Search, allDatasetAuc, igraph.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,25 @@ rsconnect/
 #Data
 data
 data/
+
+#Analysis
+analysis
+analysis/
+
+#CSV files
+*.csv
+
+#Log files
+*.log
+
+#here()
+*.here
+
+#csvs
+*.csv
+
+#htmls
+*.html
+
+#.rda
+*.rda
